# zlib

Conference/: Conference.csproj  ENodeFrameworkUnitTestInitializer.cs  Program.cs
Conference/CommandHandlers/: OrderCommandHandler.cs  SeatAssignmentsCommandHandler.cs  SeatsAvailabilityHandler.cs
Conference/Commands/: AssignSeat.cs  ConfirmOrder.cs  CreateSeatAssignments.cs  MarkSeatsAsReserved.cs  RegisterToConference.cs  SeatsAvailabilityCommand.cs
Conference/Domain/: Order.cs  SeatAssignments.cs  SeatsAvailability.cs
Conference/Entity/: OrderItem.cs  PersonalInfo.cs  SeatQuantity.cs
Conference/EventHandlers/: OrderEventHandler.cs  SeatsAssignmentsEventHandler.cs
Conference/Events/: AvailableSeatsChanged.cs  OrderConfirmed.cs  OrderPartiallyReserved.cs  OrderPlaced.cs  OrderReservationCompleted.cs  SeatAssigned.cs  SeatAssignmentUpdated.cs  SeatAssignmentsCreated.cs  SeatUnassigned.cs  SeatsReservationCommitted.cs  SeatsReserved.cs
Conference/Properties/: AssemblyInfo.cs
Conference/Utils/: GuidUtil.cs  HandleGenerator.cs
zbase/: CMakeLists.txt  build.sh
zbase/include/: Atomic.h  CurrentThread.h  Thread.h  Timestamp.h
zbase/src/: CMakeLists.txt
zbase/src/main/: CMakeLists.txt  Mutex_test.cc  epoll_benchmark.cc  epoll_test_client.cc  epoll_test_server.cc  main.cc  pingpong_client.cc  pingpong_server.cc
zbase/src/zbase/: CMakeLists.txt  Thread.cc  Timestamp.cc
zredis/: command.go  conn.go  error.go  protocol.go
zredis/examples/: main.go
